# Fax

./: .gitignore  CONTRIBUTING.md  README.ipynb  README.md  UTILS.md
api/: pyproject.toml
api/src/api/: models.py  utils.py
api/src/api/models/: folder.py
api/tests/: test_folder.py
desktop/: pyproject.toml
docs/: CapWords-CamelCase.md  PEP8-resume-fr.md  manifeste agile.md  utilisatation-vs-code.md
fax/: README.md  pyproject.toml
fax/docs/: lint.md  python-3-poetry.md  tests.md
fax/src/fax/: application.py
fax/src/fax/scripts/: run_check.py  run_lint.py  run_tests.py
fax/tests/: test_application.py
mobile/: pyproject.toml
web_api/: pyproject.toml
