[tool.poetry]
name = "fax"
version = "0.1.0"
description = "Fax est application de Gestion Électronique des Documents"
authors = ["Hugues DTANKOUO <huguesdtankouo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
mypy = "^1.9.0"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".venv",
    "build",
]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.scripts]
lint = "fax.scripts.run_lint:run"
tests = "fax.scripts.run_tests:run"
check = "fax.scripts.run_check:run"